# aoc-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: add.rs  commands.rs  init.rs  main.rs  pull.rs  temp.rs
templates/python/: 1.py  2.py
