[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.29"
clap = {version = "4.4.2", features = ["derive"]}
directories = "5.0.1"
dirs = "5.0.1"
fs_extra = "1.3.0"
git2 = "0.18.0"
glob = "0.3.1"
tokio = { version = "1.32.0", features = ["full"] }
